welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
if (Math.abs(10-a)=0 && Math.abs(10-b)=0)
{
	return 0;
}
}